{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 95,
  "lineage": "f66a3128-0420-85fe-90a1-2ae3b079d68b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "awslab_db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e85d4c3149db26a",
            "arn": "arn:aws:ec2:us-west-2:184890005885:instance/i-076b403fd14d4e3ef",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076b403fd14d4e3ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06d9085030cedfd99",
            "private_dns": "ip-172-16-1-250.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da4ed48aaff747d1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec4767860db103ba",
            "tags": {
              "Name": "awslab-db-server"
            },
            "tags_all": {
              "Name": "awslab-db-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d9ee243e98fca7ed"
            ]
          },
          "dependencies": [
            "aws_security_group.awslab_private_security_group",
            "aws_subnet.awslab_subnet_private",
            "aws_vpc.awslab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "awslab_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e85d4c3149db26a",
            "arn": "arn:aws:ec2:us-west-2:184890005885:instance/i-0a47ab6dcf25a67fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a47ab6dcf25a67fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b1ddcf6ff2273578",
            "private_dns": "ip-172-16-0-47.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.47",
            "public_ip": "54.200.205.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0490ecb7bbf4d45c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034c47c76e6cc0407",
            "tags": {
              "Name": "awslab-webserver"
            },
            "tags_all": {
              "Name": "awslab-webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e995c1d09f14a2bc"
            ]
          },
          "dependencies": [
            "aws_security_group.awslab_public_security_group",
            "aws_subnet.awslab_subnet_public",
            "aws_vpc.awslab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "awslab-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184890005885:internet-gateway/igw-05e755c49951cddf8",
            "id": "igw-05e755c49951cddf8",
            "owner_id": "184890005885",
            "tags": {
              "Name": "awslab-igw"
            },
            "tags_all": {
              "Name": "awslab-igw"
            },
            "vpc_id": "vpc-0719fe0b45213d8e1"
          },
          "dependencies": [
            "aws_vpc.awslab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05e755c49951cddf8",
            "id": "r-rtb-0d032233e5d0fb4501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d032233e5d0fb450",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.awslab-igw",
            "aws_vpc.awslab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043646d99b45e7d3b",
            "route_table_id": "rtb-0d032233e5d0fb450",
            "subnet_id": "subnet-0ec4767860db103ba"
          },
          "dependencies": [
            "aws_subnet.awslab_subnet_private",
            "aws_vpc.awslab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01397e555b851de3f",
            "route_table_id": "rtb-0d032233e5d0fb450",
            "subnet_id": "subnet-034c47c76e6cc0407"
          },
          "dependencies": [
            "aws_subnet.awslab_subnet_public",
            "aws_vpc.awslab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awslab_private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184890005885:security-group/sg-0d9ee243e98fca7ed",
            "description": "Allow access from public subnet",
            "egress": [],
            "id": "sg-0d9ee243e98fca7ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/24"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/24"
                ],
                "description": null,
                "from_port": 3110,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3110
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "awslab-private-security-group",
            "name_prefix": "",
            "owner_id": "184890005885",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0719fe0b45213d8e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.awslab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awslab_public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184890005885:security-group/sg-0e995c1d09f14a2bc",
            "description": "Allow HTTP access",
            "egress": [],
            "id": "sg-0e995c1d09f14a2bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "awslab-public-security-group",
            "name_prefix": "",
            "owner_id": "184890005885",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0719fe0b45213d8e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.awslab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awslab_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184890005885:subnet/subnet-0ec4767860db103ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec4767860db103ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184890005885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awslab-subnet-private"
            },
            "tags_all": {
              "Name": "awslab-subnet-private"
            },
            "vpc_id": "vpc-0719fe0b45213d8e1"
          },
          "dependencies": [
            "aws_vpc.awslab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awslab_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184890005885:subnet/subnet-034c47c76e6cc0407",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034c47c76e6cc0407",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "184890005885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awslab-subnet-public"
            },
            "tags_all": {
              "Name": "awslab-subnet-public"
            },
            "vpc_id": "vpc-0719fe0b45213d8e1"
          },
          "dependencies": [
            "aws_vpc.awslab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "awslab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184890005885:vpc/vpc-0719fe0b45213d8e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/23",
            "default_network_acl_id": "acl-0c76ea0d5f2859468",
            "default_route_table_id": "rtb-0d032233e5d0fb450",
            "default_security_group_id": "sg-00d36f2764b254252",
            "dhcp_options_id": "dopt-0002cd26300b6048c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0719fe0b45213d8e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d032233e5d0fb450",
            "owner_id": "184890005885",
            "tags": {
              "Name": "awslab-vpc"
            },
            "tags_all": {
              "Name": "awslab-vpc"
            }
          }
        }
      ]
    }
  ]
}